Monitor process state and send prepareToSuspend based on that https://bugs.webkit.org/show_bug.cgi?id=240359

Reviewed by Chris Dumez.

Currently UI process sends PrepareToSuspend when a process has no activity that needs an assertion, or when
assertion will be invalidated due to timeout (when assertionWillInvalidate is called). On receiving PrepareToSuspend,
process will perform necessary actions, such as suspending storage threads for network process. According to crashes in
rdar://problem/92228190, the message is not received by process before suspension, or process gets suspended while
processing the message. To fix the crash, we need to ensure the message gets processed before process suspension.

This patch introduces ProcessStateMonitor that tracks when UI process will be suspended, and notifies WebProcessPools
when remaining running time is less than 15s. On receiving the notification, ProcessThrottlers of web processes will
invalidate activities and send out PrepareToSuspend messages to web processes. These processes are not allowed to take
new background assertion until ProcessStateMonitor finds process becomes running without timeout, or ProcessStateMonitor
is destroyed. ProcessStateMonitor is created when UI process enters background, and destroyed when UI process enters
foreground, to avoid getting receiving too many unnecessary updates from runningboardd.

* Source/WebKit/Platform/spi/ios/RunningBoardServicesSPI.h:
(+[RBSProcessPredicate predicateMatchingHandle:]):
* Source/WebKit/SourcesCocoa.txt:
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::setProcessesShouldSuspend):
* Source/WebKit/UIProcess/ProcessThrottler.cpp:
(WebKit::ProcessThrottler::addActivity):
(WebKit::ProcessThrottler::setAllowsActivities):
* Source/WebKit/UIProcess/ProcessThrottler.h:
(WebKit::ProcessThrottler::Activity::Activity):
(WebKit::ProcessThrottler::Activity::name const):
(WebKit::ProcessThrottler::Activity::isQuietActivity const):
* Source/WebKit/UIProcess/WebProcessPool.h:
* Source/WebKit/UIProcess/ios/ProcessAssertionIOS.mm:
(-[WKProcessAssertionBackgroundTaskManager init]):
(-[WKProcessAssertionBackgroundTaskManager _releaseBackgroundTask]):
* Source/WebKit/UIProcess/ios/ProcessStateMonitor.h: Added.
* Source/WebKit/UIProcess/ios/ProcessStateMonitor.mm: Added.
(WebKit::ProcessStateMonitor::ProcessStateMonitor):
(WebKit::ProcessStateMonitor::~ProcessStateMonitor):
(WebKit::ProcessStateMonitor::processDidBecomeRunning):
(WebKit::ProcessStateMonitor::processWillBeSuspended):
(WebKit::ProcessStateMonitor::processWillBeSuspendedImmediately):
(WebKit::ProcessStateMonitor::suspendTimerFired):
(WebKit::ProcessStateMonitor::checkRemainingRunTime):
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/250699@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294405 268f45cc-cd09-0410-ab3c-d52691b4dbfc